[package]
name = "dynzst"
version = "0.1.2"
edition = "2021"
description = "A thin pointer for dyn Trait + IsZeroSized."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sirati/DynZSTBox.rs"
homepage = "https://github.com/sirati/DynZSTBox.rs"
documentation = "https://docs.rs/dynzst"
readme = "README.md"
keywords = ["zst", "dyn", "trait-objects", "nightly"]
categories = ["data-structures", "rust-patterns"]
exclude = [
    ".direnv/",
    ".envrc",
    "devel.nix",
    "flake.lock",
    "flake.nix",
]


[dependencies]
